--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Hexxon",
   "license": "GNU",
   "dependencies": {
+	"https-proxy-agent": ">=2.2.0",
     "alfred-teamspeak": "^4.0.1",
     "circular-json": "^0.3.3",
     "crypto": "0.0.3",
