--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,4 @@
 {
-	// Unter https://go.microsoft.com/fwlink/?LinkId=759670
-	// finden Sie die Dokumentation zum jsconfig.json-Format.
 	"compilerOptions": {
 		"target": "es6",
 		"module": "commonjs",
@@ -14,6 +12,6 @@
 		"temp"
 	],
     "files": [
-        "src/"
+        "./src/main.js"
     ]
 }
