--- a/package.json
+++ b/package.json
@@ -8,19 +8,15 @@
 	"author": "hexxone",
 	"license": "GPLv3",
 	"dependencies": {
-		"bl": ">=2.2.1",
-		"circular-json": "^0.3.3",
-		"crypto": "0.0.3",
 		"dotenv": "^14.3.2",
-		"https-proxy-agent": ">=2.2.3",
-		"lodash": ">=4.17.19",
-		"shortid": "^2.2.8",
-		"sloc": "^0.2.0",
+		"flatted": "^3.2.5",
+		"nanoid": "^3.2.0",
+		"re2": "^1.17.3",
 		"telegraf": "^4.6.0",
 		"ts-node": "^10.4.0",
 		"ts3-nodejs-library": "^3.4.1",
 		"typescript": "^4.5.5",
-		"url-regex-safe": "^2.1.0"
+		"url-regex-safe": "^3.0.0"
 	},
 	"devDependencies": {
 		"@types/node": "^17.0.13",
