--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,12 +3,12 @@ name: telegram-ts3bot Docker Image CI
 on:
   push:
     branches:
-      - 'master'
+      - "master"
     tags:
-      - 'v*'
+      - "v*"
   pull_request:
     branches:
-      - 'master'
+      - "master"
 
 jobs:
   build-container:
@@ -28,4 +28,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: telegram-ts3bot:$(date +%s)
+          tags: telegram-ts3bot:${{(date +%s)}}
