--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: itsmetommy/hello-github-actions
+          images: hexxone/telegram-ts3bot
 
       - name: Build and push
         uses: docker/build-push-action@v2
