--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,14 +9,13 @@
 	"prettier.tabWidth": 4,
 	"prettier.useTabs": true,
 	"prettier.printWidth": 200,
+	"prettier.eslintIntegration": true,
+	"eslint.lintTask.enable": true,
 	"search.exclude": {
 		"**/node_modules": true,
 		"**/bower_components": true,
 		"**/*.code-search": true,
 		"**/docs": true
-	},
-	"[glsl]": {
-		"editor.defaultFormatter": "raczzalan.webgl-glsl-editor"
 	},
 	"[markdown]": {
 		"editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
