--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"devDependencies": {
 		"@types/node": "^17.0.13",
 		"@typescript-eslint/eslint-plugin": "^5.10.2",
+		"ansi-regex": "^6.0.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
